melhor versao
Versao usando virtualThreads na leitura e escrita e platformThreads no processamento